# LLM-powered-test-failure-analyzer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
data/eval_dataset/: labeled_failures.json
scripts/: generate_eval_dataset.py  run_eval.py  seed_db.py
src/analyzer/: config.py
src/analyzer/api/: app.py  middleware.py
src/analyzer/api/routes/: analyze.py  evaluate.py  health.py
src/analyzer/eval/: metrics.py  runner.py
src/analyzer/fallback/: heuristics.py
src/analyzer/llm/: client.py  prompts.py
src/analyzer/models/: api.py  eval.py  pipeline.py
src/analyzer/pipeline/: inference.py  ingestion.py  scoring.py  storage.py  validation.py
tests/: conftest.py
tests/fixtures/: sample_logs.py  sample_responses.py
tests/integration/: test_api_routes.py  test_pipeline_end_to_end.py
tests/unit/: test_heuristics.py  test_inference.py  test_ingestion.py  test_scoring.py  test_storage.py  test_validation.py
